# Crafting-Interpreters

./: .gitignore
CLOX/: chunk.c  chunk.h  common.h  compiler.c  debug.c  main.c  main_hardcore.c  memory.c  memory.h  memory_hardcore.c  memory_hardcore.h  object.c  object.h  scanner.c  scanner.h  table.c  value.c  value.h  vm.c  vm.h
JLOX/craftinginterpreters/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxCallable.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Return.java  RuntimeError.java  Scanner.java  Stmt.java  Token.java  TokenType.java
Lesson1/: README.md
Lesson1/Ch1/: CMakeLists.txt  DoublyLinkedList.c  HelloWorld.c
Lesson1/Ch3/: hello.lox
Lesson10/Ch20/: table.c  table.h
Lesson10/Ch21/: identifierConstant.c
Lesson11/Ch22/: question3.c  question4.c
Lesson11/Ch23/: question1.c  question2.c
Lesson12/Chapter24/: question1.c  question2.c  question3.c  question4.c
Lesson12/Chapter25/: question1.c  question2.c  vectors.lox
Lesson13/Chapter26/: question3.c
Lesson13/Chapter27/: question1.c  question2.c  question3.c
Lesson15/: question1.c  question2.c
Lesson2/: comppattern.txt  grammar.txt  rpn.java
Lesson3/Ch6/: comma.java
Lesson3/Ch7/: divideByZero.java  extensionVisitBin.java
Lesson4/Ch8/: uninitialize.java  updatedREPL.java
Lesson4/Ch9/: break.java  conditional.lox
Lesson5/Ch10/: question2.java
Lesson5/Ch11/: lookup.java  unusedvar.java
Lesson6/Ch12/: question1.java  question2.java
Lesson6/Ch13/: Resolver.java  question2.java  question3.java
(+7 files in other folders)
